@@ -652,7 +652,7 @@ literal|0
 argument_list|)
 return|;
 block|}
-comment|/** Used for debugging.  Format may suddenly change.    *    *<p>Current format looks like    *<code>_a(3.1):c45/4</code>, which means the segment's    *  name is<code>_a</code>; it was created with Lucene 3.1 (or    *  '?' if it's unknown); it's using compound file    *  format (would be<code>C</code> if not compound); it    *  has 45 documents; it has 4 deletions (this part is    *  left off when there are no deletions).</p>    */
+comment|/** Used for debugging.  Format may suddenly change.    *    *<p>Current format looks like    *<code>_a(3.1):c45/4:[sorter=&lt;long: "timestamp"&gt;!]</code>, which means    *  the segment's name is<code>_a</code>; it was created with Lucene 3.1 (or    *  '?' if it's unknown); it's using compound file    *  format (would be<code>C</code> if not compound); it    *  has 45 documents; it has 4 deletions (this part is    *  left off when there are no deletions); it is sorted by the timestamp field    *  in descending order (this part is omitted for unsorted segments).</p>    */
 DECL|method|toString
 specifier|public
 name|String
@@ -743,6 +743,67 @@ operator|.
 name|append
 argument_list|(
 name|delCount
+argument_list|)
+expr_stmt|;
+block|}
+specifier|final
+name|String
+name|sorter_key
+init|=
+literal|"sorter"
+decl_stmt|;
+comment|// SortingMergePolicy.SORTER_ID_PROP; // TODO: use this once we can import SortingMergePolicy (currently located in 'misc' instead of 'core')
+specifier|final
+name|String
+name|sorter_val
+init|=
+name|diagnostics
+operator|.
+name|get
+argument_list|(
+name|sorter_key
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|sorter_val
+operator|!=
+literal|null
+condition|)
+block|{
+name|s
+operator|.
+name|append
+argument_list|(
+literal|":["
+argument_list|)
+expr_stmt|;
+name|s
+operator|.
+name|append
+argument_list|(
+name|sorter_key
+argument_list|)
+expr_stmt|;
+name|s
+operator|.
+name|append
+argument_list|(
+literal|'='
+argument_list|)
+expr_stmt|;
+name|s
+operator|.
+name|append
+argument_list|(
+name|sorter_val
+argument_list|)
+expr_stmt|;
+name|s
+operator|.
+name|append
+argument_list|(
+literal|']'
 argument_list|)
 expr_stmt|;
 block|}
