@@ -385,6 +385,11 @@ specifier|private
 name|Sort
 name|sort
 decl_stmt|;
+DECL|field|reversedSort
+specifier|private
+name|boolean
+name|reversedSort
+decl_stmt|;
 DECL|field|reader
 specifier|private
 name|IndexReader
@@ -410,11 +415,39 @@ operator|.
 name|setUp
 argument_list|()
 expr_stmt|;
-name|sort
-operator|=
+specifier|final
+name|Boolean
+name|reverse
+init|=
+operator|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|null
+else|:
 operator|new
-name|Sort
+name|Boolean
 argument_list|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+argument_list|)
+operator|)
+decl_stmt|;
+specifier|final
+name|SortField
+name|sort_field
+init|=
+operator|(
+name|reverse
+operator|==
+literal|null
+condition|?
 operator|new
 name|SortField
 argument_list|(
@@ -426,7 +459,45 @@ name|Type
 operator|.
 name|LONG
 argument_list|)
+else|:
+operator|new
+name|SortField
+argument_list|(
+literal|"ndv"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|LONG
+argument_list|,
+name|reverse
+operator|.
+name|booleanValue
+argument_list|()
 argument_list|)
+operator|)
+decl_stmt|;
+name|sort
+operator|=
+operator|new
+name|Sort
+argument_list|(
+name|sort_field
+argument_list|)
+expr_stmt|;
+name|reversedSort
+operator|=
+operator|(
+literal|null
+operator|!=
+name|reverse
+operator|&&
+name|reverse
+operator|.
+name|booleanValue
+argument_list|()
+operator|)
 expr_stmt|;
 name|createRandomIndexes
 argument_list|()
@@ -1129,6 +1200,9 @@ name|assertSorted
 parameter_list|(
 name|LeafReader
 name|reader
+parameter_list|,
+name|boolean
+name|reverse
 parameter_list|)
 throws|throws
 name|IOException
@@ -1162,6 +1236,36 @@ operator|++
 name|i
 control|)
 block|{
+specifier|final
+name|int
+name|lhs
+init|=
+operator|(
+operator|!
+name|reverse
+condition|?
+name|i
+operator|-
+literal|1
+else|:
+name|i
+operator|)
+decl_stmt|;
+specifier|final
+name|int
+name|rhs
+init|=
+operator|(
+operator|!
+name|reverse
+condition|?
+name|i
+else|:
+name|i
+operator|-
+literal|1
+operator|)
+decl_stmt|;
 name|assertTrue
 argument_list|(
 literal|"ndv("
@@ -1195,21 +1299,23 @@ name|get
 argument_list|(
 name|i
 argument_list|)
+operator|+
+literal|",reverse="
+operator|+
+name|reverse
 argument_list|,
 name|ndv
 operator|.
 name|get
 argument_list|(
-name|i
-operator|-
-literal|1
+name|lhs
 argument_list|)
 operator|<=
 name|ndv
 operator|.
 name|get
 argument_list|(
-name|i
+name|rhs
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1255,11 +1361,15 @@ decl_stmt|;
 name|assertSorted
 argument_list|(
 name|sortedReader1
+argument_list|,
+name|reversedSort
 argument_list|)
 expr_stmt|;
 name|assertSorted
 argument_list|(
 name|sortedReader2
+argument_list|,
+name|reversedSort
 argument_list|)
 expr_stmt|;
 name|assertReaderEquals
